Add files for day 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 presentations/powerpoints/~$level_up_your_workflow_spring_2021.pptm
+day_2/R-4.0.3-RStudio.sif
+day_2/R-4.0.3-RStudio-docker.sif
+notes/debug.log
+presentations/powerpoints/~$singularity_and_docker_spring_2021.pptm
